implemented event filter in the monitor log view